@@ -91,8 +91,8 @@ AC_CEREBRO_METRIC_CONTROL_PATH
 #
 # Check for special build conditions
 #
-AC_GETTIMEOFDAY_RETRY
-AM_CONDITIONAL(WITH_GETTIMEOFDAY_RETRY, [test "$ac_with_gettimeofday_retry" = "yes"])
+AC_GETTIMEOFDAY_WORKAROUND
+AM_CONDITIONAL(WITH_GETTIMEOFDAY_WORKAROUND, [test "$ac_with_gettimeofday_workaround" = "yes"])
 
 #
 # Check for static module compilation
