@@ -1,3 +1,10 @@
+2012-12-11  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerebrod_speaker.c (cerebrod_speaker): Add additional
+	workaround for gettimeofday problem.
+
+	* Rename --with-gettimeofday-retry to --with-gettimeofday-workaround.
+
 2012-11-12  Albert Chu  <chu11@llnl.gov>
 	
 	* src/libs/wrappers/wrappers.c (wrap_gettimeofday): Update log
